Change endpint to wish and add age
